# GraphEngine

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Directory.Build.props  Folder.DotSettings  LICENSE.md  LICENSE.txt  README.md  azure-pipelines-linux.yml  azure-pipelines-windows.yml  global.json  global.json.donotuse  global.xxxx  python-run-test.py  python-run.py  rebuild-task.py  task.py  task2.py  vim.exe.stackdump
src/GraphEngine/: .editorconfig  CMakeLists.txt  GraphEngine.sln
src/GraphEngine/GraphEngine/: GraphEngine.csproj  PluginConfig.cs  Program.cs
src/GraphEngine/GraphEngine.Hosting/: CMakeLists.txt  GraphEngine.Hosting.cpp  GraphEngine.Hosting.h
src/GraphEngine/trinity_host/: CMakeLists.txt  GraphEngine.Hosting.cpp  GraphEngine.Hosting.h  mscoree.h
src/GraphEngine/trinity_host/src/: GraphEngine.Hosting.cpp  GraphEngine.Hosting.h
src/GraphEngine/trinity_host_dummy/: Initializer.cs  trinity_host_dummy.csproj
src/GraphEngine/trinity_host_test/: CMakeLists.txt  main.cpp
src/Modules/GraphEngine.Jit/: CMakeLists.txt  GraphEngine.Jit.sln  build.ps1
src/Modules/GraphEngine.Jit/GraphEngine.Jit/: AsmJit.fs  GraphEngine.Jit.fsproj  JitCompiler.fs  JitNativeInterop.fs  Library.fs  Runtime.fs  TypeSystem.fs  Utils.fs  Verbs.fs
src/Modules/GraphEngine.Jit/GraphEngine.Jit.CppSharpCodegen/: GraphEngine.Jit.CppSharpCodegen.csproj  Program.cs  RenameDuplicatedPass.cs  Templates.h  packages.config
src/Modules/GraphEngine.Jit/GraphEngine.Jit.Native/: AsmJitException.cs  CMakeLists.txt  CellAccessor.cpp  CellAccessor.h  Common.cpp  Common.h  Compile.cpp  FuncCtx.cpp  FuncCtx.h  GraphEngine.Jit.Native.cpp  GraphEngine.Jit.Native.csproj  GraphEngine.Jit.Native.h  GraphEngine.Jit.Native.vcxproj  GraphEngine.Jit.Native.vcxproj.filters  Helper.cs  JitRoutines.cpp  JitRoutines.h  Std.cs  Trinity.h  TypeSystem.cpp  TypeSystem.h  Verb.cpp  Verb.h  VerbMixins.cpp  VerbMixins.h  VerbSequence.cpp  VerbSequence.h  asmjit.cs  dllmain.cpp
src/Modules/GraphEngine.Jit/GraphEngine.Jit.Playground/: GraphEngine.Jit.Playground.csproj  Program.cs  test.tsl
src/Modules/GraphEngine.Jit/GraphEngine.Jit.TSL/: GraphEngine.Jit.TSL.csproj  test.tsl
src/Modules/GraphEngine.Jit/GraphEngine.Jit.UnitTest/: Basic.fs  GraphEngine.Jit.UnitTest.csproj  GraphEngine.Jit.UnitTest.fsproj  Helper.fs  UnitTest1.cs
src/Modules/GraphEngine.Jit/XSECD/: TypeSystem.h  test.cpp  xsecd.cpp  xsecd.hpp
src/Modules/Trinity.FFI/: .build.ps1.un~  CMakeLists.txt  Trinity.FFI.sln  build-py.ps1  build.ps1  build.ps1~  pythonnet-2.4.0.dev0-cp36-cp36m-win_amd64.whl
src/Modules/Trinity.FFI/CSFunctionFactory/: CSFunctionFactory.csproj  Program.cs  test.tsl
src/Modules/Trinity.FFI/ClearNuGetPkg/: ClearNuGetPkg.csproj  packages.config
src/Modules/Trinity.FFI/SwigGen/: AssemblyInfo.fs  Gen.fs  Lib.fs  MethodExport.fs  SwigGen.fsproj
src/Modules/Trinity.FFI/TSLExamples/: Program.cs  TSLExamples.csproj
src/Modules/Trinity.FFI/Trinity.FFI.AutoCode/: Cpp.cs  Cpp.tt  (+7 more)
src/Trinity.C/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  Trinity.C.Linux.sln  Trinity.C.Linux.vcxproj  Trinity.C.rc  Trinity.C.sln  Trinity.C.vcxproj  Trinity.C.vcxproj.filters  Trinity.vcxproj  Trinity.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  resource.h
src/Trinity.C.UnitTest/: CMakeLists.txt  DirectoryTest.cpp  EventsTest.cpp  InitializeLocalMemoryStorage.cpp  LocalMemoryStorageTest.cpp  PaddingTest.cpp  PathTest.cpp  SizeTest.cpp  StringTest.cpp  Utf8Test.cpp  catch_wrapper.hpp
src/Trinity.C/AssemblerOutput/: TrinitySocketServer.Threading.asm  dllmain.asm
src/Trinity.C/include/: Trinity.h  TrinityCommon.h  TrinityErrorCode.h  collections  corelib  diagnostics  io  threading  utilities
src/Trinity.TSL/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Trinity.TSL.sln
src/Trinity.TSL/Trinity.TSL.CodeGen/: AccessorToAccessorFieldAssignment.cpp  AccessorType.h  CMakeLists.txt  Cell.cs.cpp  CellSelectors.cs.cpp  CellTypeEnum.cs.cpp  CellTypeExtension.cs.cpp  CommunicationModule.cs.cpp  CommunicationSchema.cs.cpp  Enum.cs.cpp  ExtensionAttribute.cs.cpp  ExternalParser.cs.cpp  GenericCell.cs.cpp  GenericFieldAccessor.cs.cpp  HTTP.cs.cpp  INSTALL.vcxproj  INSTALL.vcxproj.filters  Index.cs.cpp  MessageAccessors.cs.cpp  MessagePassingExtension.cs.cpp  Protocols.cs.cpp  PushPointer.cpp  Serializer.cs.cpp  StorageSchema.cs.cpp  Struct.cs.cpp  StructAccessorReverseImplicitOperator.cpp  Throw.cs.cpp  Traits.cs.cpp  Trinity.TSL.CodeGen.cpp  Trinity.TSL.CodeGen.h  Trinity.TSL.CodeGen.vcxproj  Trinity.TSL.CodeGen.vcxproj.filters  common.cpp  common.h  main.cpp
src/Trinity.TSL/Trinity.TSL.CodeGen.Legacy/: Trinity.TSL.CodeGen.Legacy.csproj
src/Trinity.TSL/Trinity.TSL.CodeTemplates/: CMakeLists.txt  Cell.cs  CellSelectors.cs  CellTypeEnum.cs  CellTypeExtension.cs  CommunicationModule.cs  CommunicationSchema.cs  Enum.cs  ExtensionAttribute.cs  ExternalParser.cs  GenericCell.cs  GenericFieldAccessor.cs  HTTP.cs  Index.cs  MessageAccessors.cs  MessagePassingExtension.cs  Protocols.cs  Serializer.cs  StorageSchema.cs  Struct.cs  Throw.cs  Traits.cs  Trinity.TSL.CodeTemplates.csproj  Trinity.TSL.CodeTemplates.sln  _Test.cs  packages.config
src/Trinity.TSL/Trinity.TSL.CompilerTask/: GenerateGraphEngineAssemblyInfo.cs  TSLCompilerTask.cs  Trinity.TSL.CompilerTask.csproj
src/Trinity.TSL/Trinity.TSL.Metagen/: MetaToken.cs  Program.cs  REGEX.cs  Tokenizer.cs  Trinity.TSL.Metagen.csproj  VM.cs
src/Trinity.TSL/Trinity.TSL.Parser/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SyntaxNode.cpp  SyntaxNode.h  Trinity.TSL.Parser.cpp  Trinity.TSL.Parser.h  Trinity.TSL.Parser.vcxproj  Trinity.TSL.Parser.vcxproj.filters  debug.cpp  debug.h  dependency_resolver.cpp  dependency_resolver.h  error.cpp  error.h  flex_bison_common.h  get_children.cpp  lex.flex.cpp  lex.l  lex.linux.cpp  parser.tab.cpp  parser.tab.h  parser.y  tb_dependency_check.cpp  tb_semantc_check.cpp
(+3170 files in other folders)
