CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

FILE(GLOB_RECURSE codegen_srcs *.cpp)

INCLUDE_DIRECTORIES(CodeGen)
ADD_EXECUTABLE(Trinity.TSL.CodeGen ${codegen_srcs})
TARGET_LINK_LIBRARIES(Trinity.TSL.CodeGen Trinity.TSL.Parser)
INSTALL(TARGETS Trinity.TSL.CodeGen RUNTIME DESTINATION ${TRINITY_INSTALL_DIR})

IF(WIN32)
    INSTALL(FILES ${TRINITY_LIB_DIR}/Trinity.TSL.CodeGen DESTINATION ${TRINITY_INSTALL_DIR})
    POSTBUILD_COPY_OUTPUT(Trinity.TSL.CodeGen ${TRINITY_LIB_DIR}/Trinity.TSL.CodeGen)
ELSEIF(UNIX)
    INSTALL(FILES ${TRINITY_LIB_DIR}/Trinity.TSL.CodeGen.exe DESTINATION ${TRINITY_INSTALL_DIR})
    POSTBUILD_COPY_OUTPUT(Trinity.TSL.CodeGen ${TRINITY_LIB_DIR}/Trinity.TSL.CodeGen.exe)
ENDIF()

