CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

FILE(GLOB_RECURSE codegen_srcs *.cpp)

INCLUDE_DIRECTORIES(CodeGen)
ADD_EXECUTABLE(Trinity.TSL.CodeGen ${codegen_srcs})
TARGET_LINK_LIBRARIES(Trinity.TSL.CodeGen PRIVATE Trinity.TSL.Parser)
INSTALL(TARGETS Trinity.TSL.CodeGen RUNTIME DESTINATION bin)

POSTBUILD_XPLAT_OUTPUT(Trinity.TSL.CodeGen ${XPLAT_LIB_DIR})