CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

FIND_PACKAGE(AsmJit)

FILE(GLOB_RECURSE jit_src    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS -DUNICODE -D_UNICODE)
ADD_LIBRARY(GraphEngine.Jit.Native SHARED ${jit_src})
TARGET_INCLUDE_DIRECTORIES(GraphEngine.Jit.Native PRIVATE ${ASMJIT_SOURCE_DIR})
TARGET_COMPILE_DEFINITIONS(GraphEngine.Jit.Native PRIVATE -DGRAPHENGINEJITNATIVE_EXPORTS)
TARGET_LINK_LIBRARIES(GraphEngine.Jit.Native PRIVATE Trinity asmjit)

POSTBUILD_XPLAT_OUTPUT(GraphEngine.Jit.Native ${XPLAT_LIB_DIR})
