CMAKE_MINIMUM_REQUIRED(VERSION 3.8.0)
PROJECT(Trinity.FFI.Native)

SET(GRAPHENGINE_JIT_DIR ${TRINITY_SRC_DIR}/Modules/GraphEngine.Jit)

INCLUDE_DIRECTORIES(
    ${TRINITY_C_DIR}/include
    ${TRINITY_C_DIR}/src
    ${GRAPHENGINE_JIT_DIR}/GraphEngine.Jit.Native
)

FILE(GLOB SRCS swig_accessor.cpp Trinity.FFI.Native.cpp)
ADD_LIBRARY(trinity_ffi SHARED ${SRCS})
TARGET_COMPILE_DEFINITIONS(trinity_ffi PRIVATE -DTRINITYFFINATIVE_EXPORTS)
TARGET_LINK_LIBRARIES(trinity_ffi Trinity)
INSTALL(TARGETS trinity_ffi DESTINATION ${TRINITY_OUTPUT_DIR})
