CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(Trinity.FFI.Native)

SET(GRAPHENGINE_JIT_DIR ${TRINITY_SRC_DIR}/Modules/GraphEngine.Jit)

FILE(GLOB SRCS *.cpp)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS -DUNICODE -D_UNICODE)
ADD_LIBRARY(trinity_ffi SHARED ${SRCS})
TARGET_COMPILE_DEFINITIONS(trinity_ffi PRIVATE -DTRINITYFFINATIVE_EXPORTS)
TARGET_LINK_LIBRARIES(trinity_ffi PUBLIC Trinity trinity_host)
TARGET_INCLUDE_DIRECTORIES(trinity_ffi PUBLIC ${GRAPHENGINE_JIT_DIR}/GraphEngine.Jit.Native ${CMAKE_CURRENT_SOURCE_DIR})

POSTBUILD_XPLAT_OUTPUT(trinity_ffi ${XPLAT_LIB_DIR})